# HarnessEngineering

acp-subagents-mcp/: .gitignore  Cargo.toml  DESIGN.md  README.md
acp-subagents-mcp/examples/: echo_agent.rs
acp-subagents-mcp/src/: client_handler.rs  config.rs  error.rs  lib.rs  main.rs  runner.rs  server.rs
browser-pipe/: Cargo.toml
browser-pipe/extension/: background.js  content.js  manifest.json  offscreen.html  offscreen.js
browser-pipe/scripts/: fetch_example.py
browser-pipe/src/: constants.rs  daemon.rs  main.rs  mcp.rs  protocol.rs
fetch-android-source/: SKILL.md
fetch-android-source/references/: test_urls.txt
fetch-android-source/scripts/: fetch.py
llm-debate/: .gitignore  AGENTS.md
llm-debate/.qoder/agents/: debate-analyzer.md  debate-con.md  debate-judge.md  debate-pro.md  debate-summarizer.md
llm-debate/.qoder/skills/debate/: SKILL.md
