[package]
name = "acp-subagents-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "acp-subagents-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.4.0", features = ["server", "transport-io", "macros"] }
agent-client-protocol = "0.10.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.89"
tokio-util = { version = "0.7.18", features = ["compat"] }
futures = "0.3.32"
