[package]
name = "browser-pipe"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
parking_lot = "0.12"
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
uuid = { version = "1.23", features = ["v4"] }
